# petproject

./: pyproject.toml
docs/: swagger.yaml
src/petproject/: main.py  objects.py
src/petproject/endpoints/: api_objects.py
src/petproject/local_db/: data.py
src/petproject/models/: models.py  pydantic_models.py
