[tool.poetry]
name = "petproject"
version = "0.1.0"
description = ""
authors = ["Khafizova Enzhe <enzhelia@gmail.com>"]
readme = "README.md"
packages = [{include = "petproject", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.95.0"}
sqlalchemy = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
