[tool.poetry]
name = "petproject"
version = "0.1.0"
description = ""
authors = ["Khafizova Enzhe <enzhelia@gmail.com>"]
readme = "README.md"
packages = [{ include = "petproject", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.0"}
fastapi-utils = "^0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
